--- a/template/plop/reactContainer/templates/__tests__/component.spec.hbs
+++ b/template/plop/reactContainer/templates/__tests__/component.spec.hbs
@@ -1,16 +1,17 @@
 import React from 'react';
+import { shallow } from 'enzyme';
 
 import { {{ pascalCase name }}Component } from '../{{ camelCase name }}.component';
-import { makePropsRenderer } from 'utils/testUtils';
 
 describe('{{ pascalCase name }}: Component', () => {
   const defaultProps = {};
 
   const component = props => <{{ pascalCase name }}Component {...defaultProps} {...props} />;
-  const render = makePropsRenderer(component);
+
+  const render = (props = {}) => shallow(component(props));
 
   it('should render correctly', () => {
-    const { container } = render();
-    expect(container.firstChild).toMatchSnapshot();
+    const wrapper = render();
+    expect(wrapper).toMatchSnapshot();
   });
 });
