--- a/template/plop/reactContainer/templates/stories.hbs
+++ b/template/plop/reactContainer/templates/stories.hbs
@@ -1,8 +1,28 @@
 import React from 'react';
-import { storiesOf } from '@storybook/react';
+import { action } from '@storybook/addon-actions';
+import { withKnobs, text } from '@storybook/addon-knobs';
 
 import { {{ pascalCase name }}Component } from './{{ camelCase name }}.component';
 
-const defaultProps = {};
+const knobs = {
+  children: (defaultValue: string) => text('children', defaultValue),
+};
 
-storiesOf('{{ pascalCase name }}', module).add('Default', () => <{{ pascalCase name }} {...defaultProps} />);
+const renderComponent = (props = {}) => {
+  const defaultProps = {
+    children: knobs.children('text'),
+  };
+
+  return <{{ pascalCase name }} {...defaultProps} {...props} />;
+};
+
+export default {
+  title: '{{ pascalCase name }}',
+  decorators: [withKnobs],
+};
+
+export const Default = () => renderComponent();
+export const DifferentTitle = () =>
+  renderComponent({
+    children: knobs.children('text 2'),
+  });
