--- a/template/plop/reduxModule/templates/__tests__/redux.spec.hbs
+++ b/template/plop/reduxModule/templates/__tests__/redux.spec.hbs
@@ -1,7 +1,7 @@
-import { reducer as {{ camelCase name }}Reducer } from '../{{ camelCase name }}.redux';
+import { reducer as {{ camelCase name }}Reducer, INITIAL_STATE } from '../{{ camelCase name }}.redux';
 
 describe('{{ pascalCase name }}: redux', () => {
-  const defaultState = {};
+  const defaultState = INITIAL_STATE;
 
   describe('reducer', () => {
     it('should return initial state', () => {
