--- a/template/plop/reduxModule/templates/index.hbs
+++ b/template/plop/reduxModule/templates/index.hbs
@@ -1,4 +1,5 @@
 import * as {{ camelCase name }}Selectors from './{{ camelCase name }}.selectors';
 import * as {{ camelCase name }}Actions from './{{ camelCase name }}.actions';
 
+export { INITIAL_STATE as {{ constantCase name }}_INITIAL_STATE } from './{{ camelCase name }}.redux';
 export { {{ camelCase name }}Actions, {{ camelCase name }}Selectors };
