--- a/template/plop/reduxModule/templates/selectors.hbs
+++ b/template/plop/reduxModule/templates/selectors.hbs
@@ -2,7 +2,8 @@ import { createSelector } from '@reduxjs/toolkit';
 import { prop } from 'ramda';
 
 import { {{ pascalCase name }}State } from './{{ camelCase name }}.redux';
+import { GlobalState } from '../reducers';
 
 export const select{{ pascalCase name }}Domain = prop<string, any>('{{ camelCase name }}');
 
-export const select{{ pascalCase name }} = createSelector<any, {{ pascalCase name }}State, any>(select{{ pascalCase name }}Domain, prop('{{ camelCase name }}'));
+export const select{{ pascalCase name }} = createSelector<GlobalState, {{ pascalCase name }}State, any>(select{{ pascalCase name }}Domain, prop('{{ camelCase name }}'));
