--- a/template/plop/reactComponent/templates/stories.hbs
+++ b/template/plop/reactComponent/templates/stories.hbs
@@ -1,8 +1,7 @@
 import React from 'react';
-import { action } from '@storybook/addon-actions';
 import { withKnobs, text } from '@storybook/addon-knobs';
 
-import { {{ pascalCase name }}Component } from './{{ camelCase name }}.component';
+import { {{ pascalCase name }}Component as Badge } from './{{ camelCase name }}.component';
 
 const knobs = {
   children: (defaultValue: string) => text('children', defaultValue),
