Fix typos in module plop

--- a/template/plop/reduxModule/templates/__tests__/sagas.spec.hbs
+++ b/template/plop/reduxModule/templates/__tests__/sagas.spec.hbs
@@ -8,7 +8,7 @@ describe('{{ pascalCase name }}: sagas', () => {
   const defaultState = {};
 
   it('should implement a test', async () => {
-    const data = { status: 'OK' }
+    const data = { status: 'OK' };
 
     mockApi.get('/').reply(200, data);
 
