--- a/template/plop/reduxModule/templates/__tests__/selectors.spec.hbs
+++ b/template/plop/reduxModule/templates/__tests__/selectors.spec.hbs
@@ -4,7 +4,7 @@ import { prepareState } from '../../../shared/utils/testUtils';
 describe('{{ pascalCase name }}: selectors', () => {
   const defaultState = prepareState(state => {
     state.{{ camelCase name }} = {
-      jokes: null,
+      {{ camelCase name }}: null,
     };
   });
 
