--- a/template/plop/reactComponent/templates/stories.hbs
+++ b/template/plop/reactComponent/templates/stories.hbs
@@ -1,7 +1,7 @@
 import React from 'react';
 import { withKnobs, text } from '@storybook/addon-knobs';
 
-import { {{ pascalCase name }}Component as Badge } from './{{ camelCase name }}.component';
+import { {{ pascalCase name }}Component as {{ pascalCase name }} } from './{{ camelCase name }}.component';
 
 const knobs = {
   children: (defaultValue: string) => text('children', defaultValue),
