Feature/plop for typescript components (#7)
* plop for typescript components and modules

* ts tests and adjust plop for module

* plop for typescript components and modules

* ts tests and adjust plop for module

* fix tests

* Fix component plop template

* Remove container plop template

* Improve testUtils typings

* Add hook param type

* Fix typos in module plop

* Fix import typo

Co-authored-by: Michał Przyszczypkowski <mikeqcp@users.noreply.github.com>

--- a/template/plop/reactComponent/templates/__tests__/component.spec.hbs
+++ b/template/plop/reactComponent/templates/__tests__/component.spec.hbs
@@ -1,13 +1,13 @@
 import React from 'react';
+import { makeContextRenderer } from 'utils/testUtils';
 
-import { {{ pascalCase name }}Component } from '../{{ camelCase name }}.component';
-import { makePropsRenderer } from 'utils/testUtils';
+import { {{ pascalCase name }}Component as {{ pascalCase name }}, {{ pascalCase name }}ComponentProps } from '../{{ camelCase name }}.component';
 
 describe('{{ pascalCase name }}: Component', () => {
-  const defaultProps = {};
+  const defaultProps: {{ pascalCase name }}ComponentProps = {};
 
-  const component = props => <{{ pascalCase name }}Component {...defaultProps} {...props} />;
-  const render = makePropsRenderer(component);
+  const component = (props: Partial<{{ pascalCase name }}ComponentProps>) => <{{ pascalCase name }} {...defaultProps} {...props} />;
+  const render = makeContextRenderer(component);
 
   it('should render correctly', () => {
     const { container } = render();
