--- a/template/plop/reactComponent/templates/component.hbs
+++ b/template/plop/reactComponent/templates/component.hbs
@@ -1,10 +1,21 @@
-import React from 'react';
+import React, { FC, ReactNode } from 'react';
 import PropTypes from 'prop-types';
 
 import { Container } from './{{ camelCase name }}.styles';
 
-export const {{ pascalCase name }}Component = () => {
-  return <Container>{{ pascalCase name }} component</Container>;
+export interface {{ pascalCase name }}ComponentProps {
+  children?: ReactNode;
+}
+
+export const {{ pascalCase name }}Component: FC<{{ pascalCase name }}ComponentProps> = ({ children }) => {
+  return (
+    <Container>
+      <h1>{{ pascalCase name }} component</h1>
+      {children}
+    </Container>
+  );
 };
 
-{{ pascalCase name }}Component.propTypes = {};
+{{ pascalCase name }}Component.propTypes = {
+  children: PropTypes.node,
+};
