--- a/template/plop/reduxModule/templates/__tests__/redux.spec.hbs
+++ b/template/plop/reduxModule/templates/__tests__/redux.spec.hbs
@@ -1,11 +1,13 @@
-import { reducer as {{ camelCase name }}Reducer } from '../{{ camelCase name }}.redux';
+import { reducer as {{ camelCase name }}Reducer, {{ pascalCase name }}State } from '../{{ camelCase name }}.redux';
 
 describe('{{ pascalCase name }}: redux', () => {
-  const defaultState = {};
+  const defaultState: {{ pascalCase name }}State = {
+    {{ camelCase name }}: null,
+  };
 
   describe('reducer', () => {
     it('should return initial state', () => {
-      expect({{ camelCase name }}Reducer(undefined, {})).toEqual(defaultState);
+      expect({{ camelCase name }}Reducer(undefined, { type: 'unknown-action' })).toEqual(defaultState);
     });
 
     it('should return state on unknown action', () => {
