--- a/template/plop/reduxModule/templates/__tests__/selectors.spec.hbs
+++ b/template/plop/reduxModule/templates/__tests__/selectors.spec.hbs
@@ -1,13 +1,16 @@
-import { select{{ pascalCase name }}Domain } from '../{{ camelCase name }}.selectors';
+import { {{ camelCase name }}Selectors } from '..';
+import { prepareState } from '../../../shared/utils/testUtils';
 
 describe('{{ pascalCase name }}: selectors', () => {
-  const defaultState = {
-    {{ camelCase name }}: {},
-  }
+  const defaultState = prepareState(state => {
+    state.{{ camelCase name }} = {
+      {{ camelCase name }}: null,
+    };
+  });
 
   describe('select{{ pascalCase name }}Domain', () => {
     it('should select a domain', () => {
-      expect(select{{ pascalCase name }}Domain(defaultState)).toEqual(defaultState.{{ camelCase name }});
+      expect({{ camelCase name }}Selectors.select{{ pascalCase name }}Domain(defaultState)).toEqual(defaultState.{{ camelCase name }});
     });
   });
 });
