relative path to testUtils in component tests

--- a/template/plop/reactComponent/templates/__tests__/component.spec.hbs
+++ b/template/plop/reactComponent/templates/__tests__/component.spec.hbs
@@ -1,6 +1,7 @@
 import React from 'react';
 import { makeContextRenderer } from 'utils/testUtils';
 
+import { makePropsRenderer } from '{{ testUtilsPath }}';
 import { {{ pascalCase name }}Component as {{ pascalCase name }}, {{ pascalCase name }}ComponentProps } from '../{{ camelCase name }}.component';
 
 describe('{{ pascalCase name }}: Component', () => {
