import makeContextRenderer instead makePropsRenderer

--- a/template/plop/reactComponent/templates/__tests__/component.spec.hbs
+++ b/template/plop/reactComponent/templates/__tests__/component.spec.hbs
@@ -1,6 +1,6 @@
 import React from 'react';
 
-import { makePropsRenderer } from '{{ testUtilsPath }}';
+import { makeContextRenderer } from '{{ testUtilsPath }}';
 import { {{ pascalCase name }}Component as {{ pascalCase name }}, {{ pascalCase name }}ComponentProps } from '../{{ camelCase name }}.component';
 
 describe('{{ pascalCase name }}: Component', () => {
