--- a/template/plop/reactComponent/templates/component.hbs
+++ b/template/plop/reactComponent/templates/component.hbs
@@ -1,4 +1,4 @@
-import React, { FC, ReactNode } from 'react';
+import React, { ReactNode } from 'react';
 
 import { Container } from './{{ camelCase name }}.styles';
 
@@ -6,7 +6,7 @@ export interface {{ pascalCase name }}ComponentProps {
   children?: ReactNode;
 }
 
-export const {{ pascalCase name }}Component: FC<{{ pascalCase name }}ComponentProps> = ({ children }) => {
+export const {{ pascalCase name }}Component = ({ children }: {{ pascalCase name }}ComponentProps) => {
   return (
     <Container>
       <h1>{{ pascalCase name }} component</h1>
