--- a/template/plop/reduxModule/templates/selectors.hbs
+++ b/template/plop/reduxModule/templates/selectors.hbs
@@ -1,9 +1,8 @@
 import { createSelector } from '@reduxjs/toolkit';
 import { prop } from 'ramda';
 
-import { {{ pascalCase name }}State } from './{{ camelCase name }}.redux';
 import { GlobalState } from '../reducers';
 
-export const select{{ pascalCase name }}Domain = prop<string, any>('{{ camelCase name }}');
+export const select{{ pascalCase name }}Domain = (state: GlobalState) => state.{{ camelCase name }};
 
-export const select{{ pascalCase name }} = createSelector<GlobalState, {{ pascalCase name }}State, any>(select{{ pascalCase name }}Domain, prop('{{ camelCase name }}'));
+export const select{{ pascalCase name }} = createSelector(select{{ pascalCase name }}Domain, prop('{{ camelCase name }}'));
