--- a/template/plop/reactComponent/templates/index.hbs
+++ b/template/plop/reactComponent/templates/index.hbs
@@ -1,4 +1,1 @@
-import { hot } from 'react-hot-loader/root';
-import { {{ pascalCase name }}Component } from './{{ camelCase name }}.component';
-
-export const {{ pascalCase name }} = hot({{ pascalCase name }}Component);
+export { {{ pascalCase name }} } from './{{ camelCase name }}.component';
