--- a/template/plop/reduxModule/templates/selectors.hbs
+++ b/template/plop/reduxModule/templates/selectors.hbs
@@ -1,8 +1,7 @@
 import { createSelector } from '@reduxjs/toolkit';
-import { prop } from 'ramda';
 
 import { GlobalState } from '../reducers';
 
 export const select{{ pascalCase name }}Domain = (state: GlobalState) => state.{{ camelCase name }};
 
-export const select{{ pascalCase name }} = createSelector(select{{ pascalCase name }}Domain, prop('{{ camelCase name }}'));
+export const select{{ pascalCase name }} = createSelector(select{{ pascalCase name }}Domain, (state) => state.{{ camelCase name }});
